First Stopping Point, 5/22
Hi Tyler! This is the base of my website. Wanted to get it checked out before I did too much more. Thanks!

--- a/17thblog/style.css
+++ b/17thblog/style.css
@@ -1,59 +1,76 @@
-h3 {
-	text-align: center;
-	color: gray;
-	padding: 10px;
-	margin: 10px;
-}
-
 h1 {
 	text-align: center;
 	color: #061643;
 	padding: 10px;
 	margin: 10px;
 	background-color: white;
+
 }
 
 h2 {
-	text-align: center;
-	border-bottom: dashed 1px #a29cce;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	margin-left: 10px;
-	margin-right: 10px;
+	font-weight: 400;
+	text-align: left;
+	border-bottom: dashed 1px #051138;
 	color: #061643;
 }
 
-.navbar {
-	background-color: #b8b1ef;
-	position: fixed;
-  	top: 10px;
-  	width: 100%;
+.navbarStyle {
 	text-align: center;
+	background-color: white;
+	font-size: 25px;
+	border-radius: 25px;
+	padding:10px;
 }
 
 
-a{
-	color: #524C81;
-}
 a:hover{
-	 transform: scale(1.5);
+	 background-color: #e6e2ff;
+}
+
+.textStyle {
+	background-color: white;
+	margin:50px;
+	margin-bottom:50px;
+	border-radius: 15px;
+	padding:10px;
 }
 
 
 .centerImage {
 	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 95%;
+	margin: auto;
+	width: 100%;
+	z-index: -1;
+	position: relative;
 }
 
+/*background */
+.bg {
+	background: linear-gradient(to bottom, #b2f7ff 0%, #b8b1ef 100%);
+	/*
+	font-family: "Verdana", Verdana, sans-serif;
+	*/
+	font-family: "Source Sans Pro", Helvetica, sans-serif;
+	font-weight: 300;
+	line-height: 1.5;
+}
+
+/* this holds the image and text*/
 .container {
-    position: relative;
+	position: relative;
+    text-align: center;
+    color: white;
 }
 
-.specialWords {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-   }
+/* This centers the words in the pic*/
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	color:#051138;
+	font-size: 30;
+	font-weight: 300;
+	background-color:white;
+	padding: 25px;
+}
